--- a/src/main/resources/public/addUser.html
+++ b/src/main/resources/public/addUser.html
@@ -41,13 +41,18 @@
                 },
                 body: JSON.stringify(newUser)
             })
-                .then(response => response.json())
-                .then(data => {
-                    console.log(data);
-                    alert('User added successfully.');
-                    window.location.href = '/users.html'; // Redirect to home page or user list
+                .then(response => {
+                    if (response.ok) {
+                        window.location.href = `/users.html`;
+                    } else {
+                        response.json().then(data => {
+                            alert(data.error);
+                        });
+                    }
                 })
-                .catch(error => console.error('Error adding user:', error));
+                .catch(error => {
+
+                });
         }
     </script>
 </head>
